Validation Error: fix unreadable text on bright background

--- a/src/components/Forms/ValidationError/style.module.less
+++ b/src/components/Forms/ValidationError/style.module.less
@@ -1,6 +1,6 @@
 .error {
     background: var(--secondary-color);
-    color: var(--bg-color);
+    color: var(--text-on-secondary-color);
     padding: .2em;
     animation-duration: 0.5s;
     animation-iteration-count: 3;
